cmake_minimum_required(VERSION 3.25)
project(CAN_Project)

set(CMAKE_CXX_STANDARD 14)

include_directories(Core/Inc)
include_directories(CPP)
include_directories(CPP/inc)
include_directories(Drivers/CMSIS/Device/ST/STM32F1xx/Include)
include_directories(Drivers/CMSIS/Include)
include_directories(Drivers/STM32F1xx_HAL_Driver/Inc)
include_directories(Drivers/STM32F1xx_HAL_Driver/Inc/Legacy)
include_directories(MDK-ARM/RTE)
include_directories(MDK-ARM/RTE/_CAN_Project)

add_executable(CAN_Project
        .idea/.gitignore
        .idea/workspace.xml
        Core/Inc/can.h
        Core/Inc/gpio.h
        Core/Inc/main.h
        Core/Inc/stm32f1xx_hal_conf.h
        Core/Inc/stm32f1xx_it.h
        Core/Src/can.c
        Core/Src/gpio.c
        Core/Src/main.c
        Core/Src/stm32f1xx_hal_msp.c
        Core/Src/stm32f1xx_it.c
        Core/Src/system_stm32f1xx.c
        CPP/inc/CAN_communication.h
        CPP/inc/LED_Light.h
        CPP/src/CAN_communication.cpp
        CPP/src/LED_Light.cpp
        CPP/cppmain.cpp
        CPP/cppmain.h
        CPP/include.h
        CPP/type.cpp
        CPP/type.h
        Drivers/CMSIS/Device/ST/STM32F1xx/Include/stm32f103xb.h
        Drivers/CMSIS/Device/ST/STM32F1xx/Include/stm32f1xx.h
        Drivers/CMSIS/Device/ST/STM32F1xx/Include/system_stm32f1xx.h
        Drivers/CMSIS/Device/ST/STM32F1xx/LICENSE.txt
        Drivers/CMSIS/Include/cmsis_armcc.h
        Drivers/CMSIS/Include/cmsis_armclang.h
        Drivers/CMSIS/Include/cmsis_compiler.h
        Drivers/CMSIS/Include/cmsis_gcc.h
        Drivers/CMSIS/Include/cmsis_iccarm.h
        Drivers/CMSIS/Include/cmsis_version.h
        Drivers/CMSIS/Include/core_armv8mbl.h
        Drivers/CMSIS/Include/core_armv8mml.h
        Drivers/CMSIS/Include/core_cm0.h
        Drivers/CMSIS/Include/core_cm0plus.h
        Drivers/CMSIS/Include/core_cm1.h
        Drivers/CMSIS/Include/core_cm23.h
        Drivers/CMSIS/Include/core_cm3.h
        Drivers/CMSIS/Include/core_cm33.h
        Drivers/CMSIS/Include/core_cm4.h
        Drivers/CMSIS/Include/core_cm7.h
        Drivers/CMSIS/Include/core_sc000.h
        Drivers/CMSIS/Include/core_sc300.h
        Drivers/CMSIS/Include/mpu_armv7.h
        Drivers/CMSIS/Include/mpu_armv8.h
        Drivers/CMSIS/Include/tz_context.h
        Drivers/CMSIS/LICENSE.txt
        Drivers/STM32F1xx_HAL_Driver/Inc/Legacy/stm32_hal_legacy.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_can.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_cortex.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_def.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_dma.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_dma_ex.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_exti.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_flash.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_flash_ex.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_gpio.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_gpio_ex.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_pwr.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_rcc.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_rcc_ex.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_tim.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_tim_ex.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_bus.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_cortex.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_dma.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_exti.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_gpio.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_pwr.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_rcc.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_system.h
        Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_utils.h
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_can.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_cortex.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_dma.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_exti.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash_ex.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio_ex.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_pwr.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc_ex.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim.c
        Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim_ex.c
        Drivers/STM32F1xx_HAL_Driver/LICENSE.txt
        MDK-ARM/.vscode/c_cpp_properties.json
        MDK-ARM/.vscode/keil-assistant.log
        MDK-ARM/.vscode/uv4.log
        MDK-ARM/.vscode/uv4.log.lock
        MDK-ARM/CAN_Project/can.d
        MDK-ARM/CAN_Project/can.o
        MDK-ARM/CAN_Project/can_communication.d
        MDK-ARM/CAN_Project/can_communication.o
        MDK-ARM/CAN_Project/CAN_Project.axf
        MDK-ARM/CAN_Project/CAN_Project.build_log.htm
        MDK-ARM/CAN_Project/CAN_Project.hex
        MDK-ARM/CAN_Project/CAN_Project.htm
        MDK-ARM/CAN_Project/CAN_Project.lnp
        MDK-ARM/CAN_Project/CAN_Project.map
        MDK-ARM/CAN_Project/CAN_Project.sct
        MDK-ARM/CAN_Project/CAN_Project_CAN_Project.dep
        MDK-ARM/CAN_Project/cppmain.d
        MDK-ARM/CAN_Project/cppmain.o
        MDK-ARM/CAN_Project/gpio.d
        MDK-ARM/CAN_Project/gpio.o
        MDK-ARM/CAN_Project/led_light.d
        MDK-ARM/CAN_Project/led_light.o
        MDK-ARM/CAN_Project/main.d
        MDK-ARM/CAN_Project/main.o
        MDK-ARM/CAN_Project/startup_stm32f103xb.o
        MDK-ARM/CAN_Project/stm32f1xx_hal.d
        MDK-ARM/CAN_Project/stm32f1xx_hal.o
        MDK-ARM/CAN_Project/stm32f1xx_hal_can.d
        MDK-ARM/CAN_Project/stm32f1xx_hal_can.o
        MDK-ARM/CAN_Project/stm32f1xx_hal_cortex.d
        MDK-ARM/CAN_Project/stm32f1xx_hal_cortex.o
        MDK-ARM/CAN_Project/stm32f1xx_hal_dma.d
        MDK-ARM/CAN_Project/stm32f1xx_hal_dma.o
        MDK-ARM/CAN_Project/stm32f1xx_hal_exti.d
        MDK-ARM/CAN_Project/stm32f1xx_hal_exti.o
        MDK-ARM/CAN_Project/stm32f1xx_hal_flash.d
        MDK-ARM/CAN_Project/stm32f1xx_hal_flash.o
        MDK-ARM/CAN_Project/stm32f1xx_hal_flash_ex.d
        MDK-ARM/CAN_Project/stm32f1xx_hal_flash_ex.o
        MDK-ARM/CAN_Project/stm32f1xx_hal_gpio.d
        MDK-ARM/CAN_Project/stm32f1xx_hal_gpio.o
        MDK-ARM/CAN_Project/stm32f1xx_hal_gpio_ex.d
        MDK-ARM/CAN_Project/stm32f1xx_hal_gpio_ex.o
        MDK-ARM/CAN_Project/stm32f1xx_hal_msp.d
        MDK-ARM/CAN_Project/stm32f1xx_hal_msp.o
        MDK-ARM/CAN_Project/stm32f1xx_hal_pwr.d
        MDK-ARM/CAN_Project/stm32f1xx_hal_pwr.o
        MDK-ARM/CAN_Project/stm32f1xx_hal_rcc.d
        MDK-ARM/CAN_Project/stm32f1xx_hal_rcc.o
        MDK-ARM/CAN_Project/stm32f1xx_hal_rcc_ex.d
        MDK-ARM/CAN_Project/stm32f1xx_hal_rcc_ex.o
        MDK-ARM/CAN_Project/stm32f1xx_hal_tim.d
        MDK-ARM/CAN_Project/stm32f1xx_hal_tim.o
        MDK-ARM/CAN_Project/stm32f1xx_hal_tim_ex.d
        MDK-ARM/CAN_Project/stm32f1xx_hal_tim_ex.o
        MDK-ARM/CAN_Project/stm32f1xx_it.d
        MDK-ARM/CAN_Project/stm32f1xx_it.o
        MDK-ARM/CAN_Project/system_stm32f1xx.d
        MDK-ARM/CAN_Project/system_stm32f1xx.o
        MDK-ARM/CAN_Project/type.d
        MDK-ARM/CAN_Project/type.o
        MDK-ARM/DebugConfig/CAN_Project_STM32F103C8_1.0.0.dbgconf
        MDK-ARM/RTE/_CAN_Project/RTE_Components.h
        MDK-ARM/CAN_Project.uvguix.Admin
        MDK-ARM/CAN_Project.uvoptx
        MDK-ARM/CAN_Project.uvprojx
        MDK-ARM/startup_stm32f103xb.s
        .mxproject
        CAN_Project.ioc)
